--- a/package.json
+++ b/package.json
@@ -1,48 +1,49 @@
 {
-  "name": "convicti-technical-test",
-  "version": "0.0.0",
+  "name": "convicti",
+  "version": "0.0.1",
+  "description": "A Quasar Project to take my exam for Convicti",
+  "productName": "Convicti App",
+  "author": "João Lucas <joaolucascp16@gmail.com>",
   "private": true,
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
-    "test:unit": "vitest",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --build --force",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "lint": "eslint --ext .js,.vue ./",
+    "format": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
+    "test": "echo \"No test specified\" && exit 0",
+    "dev": "quasar dev",
+    "build": "quasar build"
   },
   "dependencies": {
+    "@flaticon/flaticon-uicons": "^2.4.0",
+    "@quasar/extras": "^1.16.4",
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
+    "axios": "^1.2.1",
+    "jwt-decode": "^3.1.2",
+    "leaflet": "^1.9.4",
     "pinia": "^2.1.7",
-    "vue": "^3.4.15",
-    "vue-router": "^4.3.0"
+    "pinia-plugin-persistedstate": "^3.2.1",
+    "quasar": "^2.6.0",
+    "swrv": "^1.0.4",
+    "vue": "^3.0.0",
+    "vue-jwt-decode": "^0.1.0",
+    "vue-router": "^4.0.0"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.3.3",
+    "@quasar/app-vite": "^1.3.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
-    "@tsconfig/node20": "^20.1.2",
-    "@types/jsdom": "^21.1.6",
-    "@types/node": "^20.11.10",
-    "@vitejs/plugin-vue": "^5.0.3",
-    "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/test-utils": "^2.4.4",
-    "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.18",
-    "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "jsdom": "^24.0.0",
-    "npm-run-all2": "^6.1.1",
+    "dotenv": "^16.3.1",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-vue": "^9.0.0",
     "postcss": "^8.4.35",
     "prettier": "^3.0.3",
-    "tailwindcss": "^3.4.1",
-    "typescript": "~5.3.0",
-    "vite": "^5.1.4",
-    "vitest": "^1.2.2",
-    "vue-tsc": "^1.8.27"
+    "tailwindcss": "^3.4.1"
+  },
+  "engines": {
+    "node": ">= 14.19",
+    "npm": ">= 6.13.4",
+    "yarn": ">= 1.21.1"
   }
 }
