--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "swrv": "^1.0.4",
     "vue": "^3.0.0",
     "vue-jwt-decode": "^0.1.0",
-    "vue-router": "^4.0.0"
+    "vue-router": "^4.0.0",
+    "vue3-carousel": "^0.3.1"
   },
   "devDependencies": {
     "@quasar/app-vite": "^1.3.0",
