--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.2.1",
     "jwt-decode": "^3.1.2",
     "leaflet": "^1.9.4",
+    "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
     "quasar": "^2.6.0",
